--- a/project02/src/index.css
+++ b/project02/src/index.css
@@ -36,7 +36,7 @@ body.drag .rotation-icon {
   height: 50px;
   border-radius: 50%;
   background: #fff;
-  /* opacity: 0; */
+  opacity: 0;
   transition: 0.3s ease-in-out;
   pointer-events: none;
   display: flex;
