--- a/project03/src/index.css
+++ b/project03/src/index.css
@@ -43,3 +43,14 @@ html,
   padding: 0;
   margin-top: 0.5rem;
 }
+
+.calls {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 12px;
+  padding: 5px 20px;
+  color: white;
+  font-size: 22px;
+}
