--- a/project06/src/css/example03.css
+++ b/project06/src/css/example03.css
@@ -1,1 +1,44 @@
 @import "reset.css";
+
+body {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+}
+
+.scroll-container {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+}
+
+canvas {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.section {
+  width: 100%;
+  height: 100vh;
+  background: transparent;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#title {
+  color: white;
+  position: absolute;
+  top: 1rem;
+  left: 0.5rem;
+  font-size: 5rem;
+}
