--- a/project06/src/css/example03.css
+++ b/project06/src/css/example03.css
@@ -33,6 +33,7 @@ canvas {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 #title {
@@ -41,4 +42,23 @@ canvas {
   top: 1rem;
   left: 0.5rem;
   font-size: 5rem;
+}
+
+.box1,
+.box2,
+.box3 {
+  background: white;
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.box2 {
+  background: yellowgreen;
+}
+.box3 {
+  background: purple;
 }
